Bug #21928
src/mds/MDCache.cc: 7421: FAILED assert(CInode::count() == inode_map.size() + snap_inode_map.size())
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Development
Tags:
Backport:
luminous
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr:/home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/13.0.0-1710-g02b1940/rpm/el7/BUILD/ceph-13.0.0-1710-g02b1940/src/mds/MDCache.cc: 7421: FAILED assert(CInode::count() == inode_map.size() + snap_inode_map.size()) 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: ceph version 13.0.0-1710-g02b1940 (02b1940444f922cce3afcf2cb2070619d85a5089) mimic (dev) 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0x5615bfebf2c0] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 2: (MDCache::check_memory_usage()+0x7b9) [0x5615bfc59ab9] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 3: (MDSRankDispatcher::tick()+0xf7) [0x5615bfbb1e57] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 4: (FunctionContext::finish(int)+0x2a) [0x5615bfba15aa] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 5: (Context::complete(int)+0x9) [0x5615bfb9eaa9] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 6: (SafeTimer::timer_thread()+0x104) [0x5615bfebbb44] 2017-10-08T22:50:21.958 INFO:tasks.ceph.mds.b.smithi140.stderr: 7: (SafeTimerThread::entry()+0xd) [0x5615bfebd58d] 2017-10-08T22:50:21.959 INFO:tasks.ceph.mds.b.smithi140.stderr: 8: (()+0x7e25) [0x7fbbf00ace25] 2017-10-08T22:50:21.959 INFO:tasks.ceph.mds.b.smithi140.stderr: 9: (clone()+0x6d) [0x7fbbef18f34d] 2017-10-08T22:50:21.959 INFO:tasks.ceph.mds.b.smithi140.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
From: /ceph/teuthology-archive/jspray-2017-10-08_22:37:13-fs:basic_functional-wip-jcsp-testing-20171006-testing-basic-smithi/1714327/teuthology.log
Related issues
History
#1 Updated by Patrick Donnelly over 5 years ago
- Description updated (diff)
#2 Updated by Zheng Yan over 5 years ago
- Priority changed from Urgent to Normal
I think the cause is that scrub function allocates shadow inode for base inode
CInode.cc
bool validate_directory_data() { assert(in->is_dir()); if (in->is_base()) { shadow_in = new CInode(in->mdcache); in->mdcache->create_unlinked_system_inode(shadow_in, in->inode.ino, in->inode.mode); shadow_in->fetch(get_internal_callback(INODE)); return false; } else { results->inode.passed = true; return check_dirfrag_rstats(); } }
#3 Updated by Zheng Yan over 5 years ago
- Status changed from New to Fix Under Review
#4 Updated by Patrick Donnelly about 5 years ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22077: luminous: src/mds/MDCache.cc: 7421: FAILED assert(CInode::count() == inode_map.size() + snap_inode_map.size()) added
#6 Updated by Patrick Donnelly about 5 years ago
- Status changed from Pending Backport to Resolved